[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "orbitlab"
version = "0.1.0"
description = "Unit-safe orbital mechanics simulations with Python"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "numpy",
    "matplotlib",
    "pint",
    "numba"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
